frontend/src/styles/popup.css
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  z-index: 99;
  display: flex;
  justify-content: center;
  align-items: center;
}

.overlay3 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 98;
  display: flex;
  justify-content: center;
  align-items: center;
}

.popup {
  position: relative;
  margin: auto;
  background-color: var(--dark-gray);
  color: var(--light-gray);
  border-radius: 8px;
  padding: 20px 20px 80px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
  width: 800px;
  max-width: 80vw;
  max-height: 80vh;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: auto;
  position: relative;
  margin: auto;
  background-color: var(--dark-gray);
  color: var(--light-gray);
  border-radius: 8px;
  padding: 20px 20px 80px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
  width: 80%;
  max-width: 800px;
  height: 85%;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: auto;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  color: var(--light-gray);
  padding: 0 5px;
}

.close-btn:hover {
  cursor: pointer;
  animation: rotate 0.5s;
}

@keyframes rotate {
  0% {
    transform: rotate(10deg);
  }

  50% {
    transform: rotate(-20deg);
  }

  100% {
    transform: rotate(10deg);
  }
}

.popup-content {
  width: 100%;
  padding: 10px 30px 20px;
  display: grid;
  grid-template-columns: 60% 40%;
  row-gap: 10px;
  column-gap: 20px;
}

.button-container {
  display: flex;
  justify-content: space-around;
  gap: 20px;
}

.button-container button {
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: var(--basic-font);
  font-size: 0.95em;
  min-width: 50%;
}

.button-container button:nth-child(1) {
  background-color: var(--light-gray);
  color: var(--dark-gray);
}

.button-container button:nth-child(1):hover {
  background-color: var(--button);
  color: var(--light-gray);
}

.button-container button:nth-child(2) {
  background-color: var(--important);
  color: var(--light-gray);
}

.button-container button:nth-child(2):hover {
  background-color: var(--important-light);
  color: var(--light-gray);
}

.board-input {
  width: 60%;
  border: none;
  background-color: transparent;
  color: var(--light-gray);
  font-size: 1.2em;
  padding: 5px;
}

.board-input:focus {
  outline: none;
  background-color: transparent;
  border-radius: 5px;
}

.due-date {
  width: 17%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
}

.priority {
  width: 25%;
}

.due-date-picker {
  background-color: var(--dark-gray);
  color: var(--light-gray);
  border: none;
  box-shadow: none;
  outline: none;
  width: 100%;
}

.priority:hover,
.due-date-picker:hover {
  cursor: pointer;
}

.description-textarea {
  width: 95%;
  margin-left: 5%;
  padding: 10px;
  resize: none;
  border: 1px solid var(--light-gray);
  border-radius: 5px;
  background-color: var(--dark-Navbar);
  font-family: var(--basic-font);
  color: var(--light-gray);
}

.description-textarea:focus {
  outline: none;
}

.subtask {
  width: 95%;
  margin-left: 5%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.addbtn-subtask {
  color: var(--light-gray);
  width: 120px;
  margin: 15px 0 0 5px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
}

.addbtn-subtask:hover {
  color: var(--off-white);
}

.addbtn-tag {
  margin-left: 10px;
  font-size: 1.2em;
  color: var(--light-gray);
  cursor: pointer;
}

.addbtn-tag:hover {
  color: var(--off-white);
}

.upper-part {
  width: 90%;
  height: 30px;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid var(--light-gray);
}

.lower-part {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  overflow-y: auto;
}

.popup-mini {
  background-color: var(--dark-gray);
  color: var(--light-gray);
  padding: 30px 30px 30px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  width: 340px;
  height: max-content;
}

.popup-content-form-mini {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.popup-input-mini {
  width: 70%;
  color: var(--light-gray);
  font-family: var(--basic-font);
  font-size: 1.5em;
  margin: 10px 20px 30px;
  background: transparent;
  border: none;
  outline: none;
  text-align: center;
}

.save-button {
  position: absolute;
  bottom: 10px;
  right: 10px;
  width: 80px;
  padding: 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-family: var(--basic-font);
  font-size: 0.95em;
  background-color: var(--bg-dark);
  color: var(--light-dark);
  transition: 0.1s ease;
}

.save-button:hover {
  background-color: var(--confirm);
  color: var(--light-gray);
}

.add-icon {
  position: absolute;
  bottom: 10px;
  left: 10px;
  font-size: 2em;
  background-color: transparent;
  color: var(--light-gray);
  border: none;
  border-radius: 50%;
  padding: 0 5px;
  cursor: pointer;
  transition: 0.1s ease;
}

.add-icon:hover {
  color: var(--off-white);
}

.darken {
  backdrop-filter: brightness(0.5);
}

.add-to-card,
.priority-picker {
  width: 150px;
  height: max-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid var(--light-gray);
  border-radius: 8px;
  padding: 10px;
  background-color: var(--bg-dark);
}

.add-to-card-title {
  font-size: 1.2em;
  margin-bottom: 10px;
  border-bottom: 1px solid var(--light-gray);
  padding-bottom: 5px;
}

.add-to-card-content,
.priority-picker-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  flex-grow: 1;
}
/* ... */

